# authentication-app_cpp

./: CMakeLists.txt  README.md
include/authentication-app/: Application.h  Auth.h  Cryptor.hpp  DetailsManager.hpp  JSONParseable.h  Request.h  RequestException.h  User.h  UserDetails.hpp
include/authentication-app/exceptions/: FileNotFound.hpp
include/authentication-app/network/request/: CreateDetailsRequest.hpp  LoginRequest.hpp  SignupRequest.hpp
include/authentication-app/network/response/: CreateDetailsResponse.hpp  GetUserResponse.hpp  LoginResponse.hpp  SignupResponse.hpp
src/: Application.cpp  Auth.cpp  Cryptor.cpp  DetailsManager.cpp  Request.cpp  main.cpp
